# AutoML-Framework

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  predictions.csv  pyproject.toml
.github/workflows/: ci.yml
configs/: example_config.yaml
reports/run_20260721_101416/: report.html
reports/run_20260721_123613/: report.html
reports/run_20260721_172702/: report.html
reports/run_20260721_173115/: report.html
src/automl/: api.py  cli.py  config.py
src/automl/data/: loader.py
src/automl/evaluation/: explainability.py  metrics.py  plots.py
src/automl/models/: persistence.py  zoo.py
src/automl/optimization/: search.py
src/automl/preprocessing/: pipeline.py
src/automl/reporting/: report_generator.py
src/automl/reporting/templates/: report_template.html
src/automl/tracking/: mlflow_logger.py
tests/: test_api.py  test_config.py  test_integration.py  test_loader.py  test_metrics.py  test_mlflow_logger.py  test_pipeline_integration.py  test_preprocessing.py  test_report_generator.py  test_search.py
