[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "automl-framework"
version = "0.1.0"
description = "A lightweight AutoML framework: multi-model search with Optuna, full evaluation reports, and a servable API."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Your Name" }]

dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "optuna>=3.5",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "shap>=0.44",
    "pyyaml>=6.0",
    "pydantic>=2.5",
    "jinja2>=3.1",
    "joblib>=1.3",
    "mlflow>=2.10",
    "fastapi>=0.109",
    "uvicorn[standard]>=0.27",
    "streamlit>=1.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "black>=24.1",
    "ruff>=0.2",
    "mypy>=1.8",
    "pre-commit>=3.6",
    "httpx>=0.26",
]

[project.scripts]
automl = "automl.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
automl = ["reporting/templates/*.html"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=automl --cov-report=term-missing"
